# RL-pknu-de-2026

./: README.md  pyproject.toml  프로그램 2-1 FrozenLake 과업의 MDP 사이클 확인.txt  프로그램 2-3 FrozenLake에서 최적 정책의 기대 이득 추정.txt  프로그램 4-7 몬테카를로 방법으로 정책 학습(𝜺-소프트 적용).txt
chapter2/: 프로그램 2-2 FrozenLake에서 최적 정책의 기대 이득 추정.py
chapter3/: 프로그램 3-1 벨만 방정식을 이용하여 랜덤 정책을 평가(FrozenLake 과업).py  프로그램 3-2 FrozenLake 과업을 위한 정책 반복 알고리즘.py  프로그램 3-3 FrozenLake 과업을 위한 가치 반복 알고리즘.py  프로그램 3-4 FrozenLake 과업의 MDP 전이 확률 분포를 확인.py  프로그램 3-5 FrozenLake 과업을 위한 가치 반복 알고리즘(스토캐스틱 환경).py  프로그램 3-6 FrozenLake 과업을 위한 가치 반복 알고리즘(의도한 방향의 확률을 높인 스ᄐ.py
chapter4/: 프로그램 4-3 다중 손잡이 밴딧에서 순수 탐험과 𝜺-탐욕의 기대 이득 분석.py  프로그램 4-4 큰 탐색 공간에서 탐사 위주와 𝜺-탐욕 UCB의 성능 분석.py  프로그램 4-1 FrozenLake 과업에서 에피소드 생성.py  프로그램 4-2 CartPole 과업에서 에피소드 생성과 렌더링.py  프로그램 4-5 몬테카를로 방법으로 정책 평가(상태 가치 함수 계산).py  프로그램 4-6 몬테카를로 방법으로 정책 평가(행동 가치 함수 계산).py
chapter5/: 5_9.py  프로그램 5-1 Q-러닝으로 정책 학습(𝜺-탐욕 적용).py  프로그램 5-6 랜덤 정책과 Q-러닝으로 학습한 𝑞 함수의 수익 비교 분석.py  프로그램 5-10 Q-러닝 학습 결과를 이용한 CartPole 시험.py  프로그램 5-2 Q-러닝의 학습 곡선.py  프로그램 5-3 블랙잭 게임 시뮬레이션.py  프로그램 5-4 Q-러닝으로 Blackjack 과업 학습.py  프로그램 5-5 블랙잭 게임 플레이.py  프로그램 5-7 Q 함수 해석.py  프로그램 5-8 CartPole 과업의 상태 변수 범위 알아내기.py  프로그램 5-9 Q-러닝을 이용한 CartPole 과업 학습.py
chapter6/: 프로그램 6-1 MNIST 데이터로 신경망의 일반화 능력 측정.py  프로그램 6-2 신경망 기반 Q-러닝(CartPole 과업의 학습).py  프로그램 6-3 CartPole 과업 시험.py  프로그램 6-4 Blackjack 학습.py  (+2 more)
